Started Final Project

--- a/assignments/FinalProject/SpaceInvader/index.html
+++ b/assignments/FinalProject/SpaceInvader/index.html
@@ -3,12 +3,16 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/molleindustria/p5.play/lib/p5.play.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.8.12/Tone.min.js"></script>
    	<script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5.serialserver@0.0.28/lib/p5.serialport.js"></script>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="main.js"></script>
     <script src="ship.js"></script>
-    <script src="flower.js"></script>
-    <script src="drop.js"></script>
+    <script src="alien.js"></script>
+    <script src="laser.js"></script>
+    <script src="barrier.js"></script>
+    <script src="bonusAlien.js"></script>
   </body>
-</html>
+</html> 
