added sound effects

--- a/assignments/FinalProject/SpaceInvader/index.html
+++ b/assignments/FinalProject/SpaceInvader/index.html
@@ -14,5 +14,6 @@
     <script src="laser.js"></script>
     <script src="barrier.js"></script>
     <script src="bonusAlien.js"></script>
+    <script src="Rocket.js"></script>
   </body>
 </html> 
