Game complete just missing power ups.

--- a/assignments/FinalProject/SpaceInvader/index.html
+++ b/assignments/FinalProject/SpaceInvader/index.html
@@ -15,5 +15,6 @@
     <script src="barrier.js"></script>
     <script src="bonusAlien.js"></script>
     <script src="Rocket.js"></script>
+    <script src="powerUps.js"></script>
   </body>
 </html> 
