--- a/assignments/FinalProject/SpaceInvader/index.html
+++ b/assignments/FinalProject/SpaceInvader/index.html
@@ -14,7 +14,7 @@
     <script src="laser.js"></script>
     <script src="barrier.js"></script>
     <script src="bonusAlien.js"></script>
-    <script src="Rocket.js"></script>
+    <script src="rocket.js"></script>
     <script src="powerUps.js"></script>
   </body>
 </html> 
